--- a/api/.env.example
+++ b/api/.env.example
@@ -46,3 +46,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SEO_RANK_API_KEY=50766FDF557DEA92B82D3CBFEFDF9BE0
+CHECK_TRUST_API_KEY=a0aece19412bc5f00b4e595fbd158fb4
