--- a/api/composer.json
+++ b/api/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "pda/pheanstalk": "^4.0",
+        "pusher/pusher-php-server": "^4.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
