--- a/api/.env.example
+++ b/api/.env.example
@@ -24,8 +24,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=mailgun
-MAILGUN_DOMAIN=sandboxd0c9fd49e3804e39b93f736488b02c09.mailgun.org
-MAILGUN_SECRET=99e3b9ae625915bce22e9374c6298b5f-0d2e38f7-e54e1a86
+MAILGUN_DOMAIN=
+MAILGUN_SECRET=
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
