--- a/api/.env.example
+++ b/api/.env.example
@@ -23,16 +23,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=mailgun
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
 
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=doer.todo.com@gmail.com
+MAIL_PASSWORD=doer_2020$
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@guest-poster.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
